release_snapshots/abiogenesis-typescript-tenant/4.1.0-rc.13/release-note.md
# abiogenesis 4.1.0-rc.13 Release Candidate Note

This checkpoint is the thirteenth TypeScript ABG `4.1.0` release candidate. It
follows `4.1.0-rc.12` and closes the GOAL-014 ABI/GTL substrate gap for
downstream lifecycle consumers such as `odd_glc`.

It is an RC candidate, not the final tapped `4.1.0` release.

## Release Claim

RC13 keeps the RC12 downstream-consumable requirements route, then adds the
remaining substrate needed before `odd_glc` can proceed toward generic
lifecycle parity without returning mid-flight for ABI support:

- ABI publishes a non-closed requirements-route replay proof with residual
  pressure and continuation/re-entry truth.
- GTL ratifies requirement graph and refinement declarations without importing
  ABG runtime code or introducing a local requirement compiler.
- ABG admits, projects, folds, residualizes, and queries multi-requirement
  structure over existing `RequirementTerm` and `RequirementRelation` truth.
- Requirement span identity is stable across frame, zoom, recursion, foldback,
  continuation, and re-entry boundaries.
- ABG publishes the recursive executive observer projection surface for
  preserving obligation pressure without downstream product-local controllers.
- The public `abg/executive` facade exposes projection helpers only. It does
  not expose runtime event emission, workspace mutation, continuation control,
  closure authority, or product semantic compilers.

These repairs preserve the governing split: GTL declares inert graph,
requirement, span, and composition truth; ABG admits, runs, emits, replays,
folds, residualizes, projects, and routes continuation; downstream lifecycle
frameworks interpret admitted read models and policy overlays only.

## Boundary

The governing execution framing remains:

```text
ABG.start(fn<A, B>.C)
  .bind(system.openGraphCall)
  .bind(system.openFrame)
  .bind(system.planTransformSet)
  .bind(plugin.transform.C.task[*])
  .bind(system.admitTransformTaskResult[*])
  .bind(system.writeTransformEventsAndLedgers)
  .bind(system.collectTransformSet)
  .bind(system.planEvaluationSet)
  .bind(plugin.evaluate.C.rule[*])
  .bind(system.admitEvaluationRuleResult[*])
  .bind(system.writeEvaluationLedgers)
  .bind(system.collectEvaluationSet)
  .bind(system.assuranceFold)
  .bind(plugin.consequence.C)
  .bind(system.admitConsequenceProjection)
  .bind(system.traversalTransition)
  .bind(system.replayContinuation)
```

RC13 does not move downstream product meaning into ABG. Downstream products own
domain interpretation, policy overlays, prompts, and product-specific proof
reading. ABG owns generic requirements-route truth, multi-requirement
projection, span lineage, recursive executive observation, runtime events,
replay, continuation, and query mechanics.

## Versioned Artifacts

- RC branch: `main`
- RC identity: `4.1.0-rc.13`
- Candidate package version: `4.1.0-rc.13`
- Candidate tag: `v4.1.0-rc.13`

## Verification

Required evidence for accepting this RC:

```text
ABG semantic build and focused GOAL-014 gates:
  npm run build:semantic
  npm run lint:semantic
  npm run lint:test-harness
  npm run test:t160
  npm run test:t167
  npm run test:t168
  npm run test:t169

Inherited substrate regression gates:
  npm run test:t145
  npm run test:t146
  npm run test:t148
  npm run test:t159
  npm run test:t162
  npm run test:t164
  npm run test:semantic

Live F_P proof gates:
  npm run test:t160:live
  npm run test:t162:live
  npm run test:t165:hello-world-live
  npm run test:t168:live
  npm run test:t169:live

Release packaging gate:
  git diff --check
  npm_config_cache=/tmp/abg-npm-cache npm pack --dry-run
```

The release checkpoint recorded these gates as passing before snapshot
preparation. The live T-160 artifact for recursive executive observation is:

```text
build_tenants/abiogenesis/typescript/test_env/test_runs/t160_recursive_executive_observer_live/20260629T025541939Z_pid48947/executive-observer-manifest.json
sha256:892fa34495f9477ab98338fe13f387a9212bd59c34e2578e596156bbfd2731f5
```

The live route artifacts for T-165, T-168, and T-169 are under
`build_tenants/abiogenesis/typescript/test_env/test_runs/` and are generated by
their governed live proof commands.

## RC Decision

RC13 is the ABI/GTL completion candidate for downstream generic lifecycle work.
It is releaseable after the release packaging checks pass, the release snapshot
is written from the source commit, and downstream lifecycle consumers pin this
RC as GTL/ABG-owned substrate rather than rebuilding requirement graphs, span
lineage, residual pressure, executive observation, or continuation controllers
locally.
